# mincfit

./: AUTHORS  Makefile.am  configure.ac  epm-header.in  gamma_func.c  gamma_func.h  mincfit.c  t1_func.c  t1_func.h
